--- a/package.json
+++ b/package.json
@@ -34,15 +34,13 @@
   "license": "MIT",
   "dependencies": {
     "@prisma/client": "^3.4.0",
-    "@types/swagger-ui-express": "^4.1.3",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "express-jwt": "^6.1.0",
     "jsonwebtoken": "^8.5.1",
-    "slugify": "^1.6.0",
-    "swagger-ui-express": "^4.1.6"
+    "slugify": "^1.6.0"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.2",
